# psede

./: CMakeLists.txt  README.md
cmake/Modules/: Findfftw3.cmake  Findlapacke.cmake
src/: CMakeLists.txt  collocation.c  cps.c  cps.h  cps_ode.c  cps_ode.h  diff.c  fct.c  func.c  multi.c  ode.c  psede.c  psede.h  psede_collocation.h  psede_diff.h  psede_fct.h  psede_func.h  psede_multi.h  psede_ode.h  psede_util.h  util.c
tests/: CMakeLists.txt  difftest.c  kfe2dtest.c  lintest.c  multitest.c  trtest.c
